# interview-prep-project

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.md  conftest.py  manage.py  pyproject.toml
.github/workflows/: django.yml  pull-request-lint.yml
config_core/: asgi.py  settings.py  urls.py  wsgi.py
tests/: example.py  test_example.py
