[tool.poetry]
name = "interview-prep-project"
version = "0.1.0"
description = "todo"
authors = ["ivanprytula <ivanprytula87@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "interview_prep_project"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
